--- a/expresiones_regulares.html
+++ b/expresiones_regulares.html
@@ -25,7 +25,7 @@
      console.log(expReg.test(cadena));
      console.log(expReg.exec(cadena));
 
-     let expReg2 = /lorem{1,}/ig;
+     let expReg2 = /lorem{1,}/i;
      console.log(expReg2.test(cadena));
      console.log(expReg2.exec(cadena)); 
 	</script>
